Update integrator.sh executable script